tests/samples/negative/functions/variadic_argument_count.ax
module variadic_argument_count;

extern c {
    @name("printf")
    fn printf(format: *const u8, ...) -> i32;
}

fn main() -> i32 {
    return printf();
}
